--- a/package.json
+++ b/package.json
@@ -1,8 +1,40 @@
 {
   "name": "reend-components",
   "version": "0.1.0",
+  "private": false,
   "description": "Arknights: Endfield Design System — React component library with Tailwind CSS",
   "type": "module",
+  "main": "./dist/lib/index.cjs",
+  "module": "./dist/lib/index.mjs",
+  "types": "./dist/lib/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/lib/index.d.ts",
+        "default": "./dist/lib/index.mjs"
+      },
+      "require": {
+        "types": "./dist/lib/index.d.cts",
+        "default": "./dist/lib/index.cjs"
+      }
+    },
+    "./styles.css": "./dist/lib/style.css",
+    "./variables.css": "./src/styles/variables.css",
+    "./tailwind": {
+      "import": "./src/tailwind-preset.ts",
+      "require": "./src/tailwind-preset.ts"
+    }
+  },
+  "files": [
+    "dist/lib",
+    "src/styles",
+    "src/tailwind-preset.ts",
+    "README.md",
+    "LICENSE"
+  ],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "license": "MIT",
   "author": "VBeatDead (https://github.com/VBeatDead)",
   "repository": {
@@ -12,7 +44,7 @@
   "bugs": {
     "url": "https://github.com/VBeatDead/ReEnd-Components/issues"
   },
-  "homepage": "https://github.com/VBeatDead/ReEnd-Components#readme",
+  "homepage": "https://reend-components.pages.dev",
   "keywords": [
     "react",
     "components",
@@ -24,10 +56,21 @@
     "typescript",
     "radix-ui"
   ],
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
+  },
+  "peerDependenciesMeta": {
+    "tailwindcss": {
+      "optional": true
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:lib": "vite build --config vite.lib.config.ts",
+    "prepublishOnly": "npm run build:lib",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
@@ -69,6 +112,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   }
 }
