--- a/package.json
+++ b/package.json
@@ -83,10 +83,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
     "fuse.js": "^7.1.0",
+    "i18next": "^25.8.10",
+    "i18next-browser-languagedetector": "^8.2.1",
     "lucide-react": "^0.462.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "react-error-boundary": "^6.1.1",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^6.30.1",
     "shiki": "^3.22.0",
     "sonner": "^1.7.4",
