--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "prebuild": "node --experimental-strip-types scripts/generate-llms.ts",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "build:lib": "vite build --config vite.lib.config.ts",
