--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reend-components",
   "version": "0.1.0",
   "private": false,
-  "description": "Arknights: Endfield Design System — React component library with Tailwind CSS",
+  "description": "Tactical, sci-fi, and gaming-inspired React component library — Arknights: Endfield Design System",
   "type": "module",
   "main": "./dist/lib/index.cjs",
   "module": "./dist/lib/index.mjs",
@@ -14,7 +14,7 @@
         "default": "./dist/lib/index.mjs"
       },
       "require": {
-        "types": "./dist/lib/index.d.cts",
+        "types": "./dist/lib/index.d.ts",
         "default": "./dist/lib/index.cjs"
       }
     },
@@ -54,14 +54,27 @@
     "arknights",
     "endfield",
     "typescript",
-    "radix-ui"
+    "radix-ui",
+    "sci-fi",
+    "dark-theme",
+    "gaming",
+    "dashboard",
+    "hud"
   ],
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "framer-motion": ">=10.0.0",
+    "lucide-react": ">=0.400.0"
   },
   "peerDependenciesMeta": {
     "tailwindcss": {
+      "optional": true
+    },
+    "framer-motion": {
+      "optional": true
+    },
+    "lucide-react": {
       "optional": true
     }
   },
@@ -83,17 +96,6 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.34.0",
-    "fuse.js": "^7.1.0",
-    "i18next": "^25.8.10",
-    "i18next-browser-languagedetector": "^8.2.1",
-    "lucide-react": "^0.462.0",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
-    "react-error-boundary": "^6.1.1",
-    "react-i18next": "^16.5.4",
-    "react-router-dom": "^6.30.1",
-    "shiki": "^3.22.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
@@ -112,9 +114,20 @@
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "framer-motion": "^12.34.0",
+    "fuse.js": "^7.1.0",
     "globals": "^15.15.0",
+    "i18next": "^25.8.10",
+    "i18next-browser-languagedetector": "^8.2.1",
     "jsdom": "^20.0.3",
+    "lucide-react": "^0.462.0",
     "postcss": "^8.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.1.1",
+    "react-i18next": "^16.5.4",
+    "react-router-dom": "^6.30.1",
+    "shiki": "^3.22.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
