--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -22,5 +22,5 @@
     "src/lib/utils.ts",
     "src/hooks/use-toast.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts", "**/*.spec.tsx"]
 }
