feat: add Button and Badge components with variants, update package dependencies, and enhance ButtonsDemo example

--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
     "hud"
   ],
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
     "framer-motion": ">=10.0.0",
-    "lucide-react": ">=0.400.0"
+    "lucide-react": ">=0.400.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
     "tailwindcss": {
@@ -92,6 +92,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "class-variance-authority": "^0.7.1",
