fix accessibility, light mode compliance, test reorganization
   - WCAG 2.1 AA: full aria audit across all 47 components (roles, labels, aria-current, aria-disabled)
   - Light mode: replaced hardcoded border-white/x + bg-white/x with adaptive semantic tokens in 18 components
   - Tests: reorganized 20 scattered files → 13 domain-grouped suites, 675 tests, 97.87% stmt coverage
   - CLI: fixed version string to 1.0.0 (was 0.4.0)
   - Docs: Tooltip now hover-triggered via Radix UI; Popover is uncontrolled click-based
   - Docs: Scroll-Triggered Animation re-fires on every viewport entry via IntersectionObserver
   - CSS: fixed corner-brackets cascade bug (border shorthand overriding border-color)
   - Changelog: EN + ID updated for v1.0.0; tailwind-preset + tailwind.config border-strong token

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reend-components",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "private": false,
   "description": "Tactical, sci-fi, and gaming-inspired React component library — Arknights: Endfield Design System",
   "type": "module",
@@ -26,7 +26,7 @@
     }
   },
   "bin": {
-    "reend-ui": "./dist/bin/cli.cjs"
+    "reend-ui": "dist/bin/cli.cjs"
   },
   "files": [
     "dist/lib",
@@ -43,7 +43,7 @@
   "author": "VBeatDead (https://github.com/VBeatDead)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/VBeatDead/ReEnd-Components.git"
+    "url": "git+https://github.com/VBeatDead/ReEnd-Components.git"
   },
   "bugs": {
     "url": "https://github.com/VBeatDead/ReEnd-Components/issues"
